--- a/main/index.html
+++ b/main/index.html
@@ -106,7 +106,7 @@
 							<li class="l-section section">
 								<div class="about">
 									<div class="about--banner">
-										<h2 class="abouttxp">About TXP</h2>
+										<h2 class="txp">About TXP</h2>
 										<p>In the world full of infinite possibilities and opportunities, there lies a
 											whole lot of
 											innovators, tech enthusiasts or geeks who are just waiting for a chance to
@@ -313,7 +313,7 @@
 				<li>Msg Us</li>
 			</ul>
 		</div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')</script>
 		<script src="assets/js/hammer.min.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/6.1.0/firebase-app.js"></script>
